# 42-py-cpp

c-00/ex0/: ft_hello_garden.c
c-00/ex2/: ft_harvest_total.c
c-00/ex4/: ft_water_reminder.c
c-01/: CMakeLists.txt
c-01/ex0/: ft_garden_intro.c
c-01/ex1/: Plant.c  Plant.h  ft_garden_data.c  ft_plot_area.c
c-01/ex2/: Plant.c  Plant.h  ft_plant_growth.c
c-01/ex3/: Plant.c  Plant.h  ft_plant_age.c  ft_plant_factory.c
c-01/ex4/: SafePlant.c  SafePlant.h  ft_garden_security.c
c-01/ex5/: Flower.c  Flower.h  Plant.c  Plant.h  Tree.c  Tree.h  Vegetable.c  Vegetable.h  ft_count_harvest_iterative.c  ft_count_harvest_recursive.c  ft_plant_types.c
c-01/ex6/: ft_garden_summary.c
c-01/ex7/: ft_seed_inventory.c
c-05/: CMakeLists.txt
c-05-vibecoded/: CMakeLists.txt
c-05-vibecoded/ex0/: DataProcessor.h  LogProcessor.c  LogProcessor.h  NumericProcessor.c  NumericProcessor.h  TextProcessor.c  TextProcessor.h  main.c
c-05-vibecoded/ex1/: DataStream.h  EventStream.c  EventStream.h  SensorStream.c  SensorStream.h  StreamProcessor.c  StreamProcessor.h  TransactionStream.c  TransactionStream.h  main.c
c-05-vibecoded/ex2/: Adapters.c  Adapters.h  NexusManager.c  NexusManager.h  ProcessingPipeline.c  ProcessingPipeline.h  ProcessingStage.h  Stages.c  Stages.h  main.c
c-05/ex0/: DataProcessor.h  LogProcessor.c  LogProcessor.h  NumericProcessor.c  NumericProcessor.h  TextProcessor.c  TextProcessor.h  main.c  template_functions.c  template_functions.h
c-05/ex1/: DataStream.h  EventStream.h  SensorStream.h  TransactionStream.h  test_data_stream.c  test_data_stream.h
c-07-vibecoded/: CMakeLists.txt
c-07-vibecoded/ex0/: card.h  creature_card.c  creature_card.h  main.c
c-07-vibecoded/ex1/: artifact_card.c  artifact_card.h  deck.c  deck.h  main.c  spell_card.c  spell_card.h
c-07-vibecoded/ex2/: card.h  combatable.h  elite_card.c  elite_card.h  elite_card_test  magical.h  main.c
c-07-vibecoded/ex3/: aggressive_strategy.c  aggressive_strategy.h  card_factory.h  fantasy_card_factory.c  fantasy_card_factory.h  game_engine.c  game_engine.h  game_strategy.h  main.c
c-07-vibecoded/ex4/: main.c  rankable.h  tournament_card.c  tournament_card.h  tournament_platform.c  tournament_platform.h
cpp-00/ex0/: ft_hello_garden.cpp
cpp-00/ex1/: ft_plot_area.cpp
cpp-00/ex2/: ft_harvest_total.cpp
cpp-00/ex3/: ft_plant_age.cpp
cpp-00/ex4/: ft_water_reminder.cpp
cpp-00/ex5/: ft_count_harvest_iterative.cpp  ft_count_harvest_recursive.cpp
cpp-00/ex6/: ft_garden_summary.cpp
cpp-00/ex7/: ft_seed_inventory.cpp
cpp-01/: CMakeLists.txt
cpp-01/ex0/: ft_garden_intro.cpp
cpp-01/ex1/: Plant.cpp  Plant.hpp  ft_garden_data.cpp
cpp-01/ex2/: Plant.cpp  Plant.hpp  ft_plant_growth.cpp
cpp-01/ex3/: Plant.cpp  Plant.hpp  ft_plant_factory.cpp
cpp-01/ex4/: SafePlant.cpp  SafePlant.hpp  ft_garden_security.cpp
cpp-01/ex5/: Flower.cpp  Flower.hpp  Plant.hpp  Tree.cpp  Tree.hpp  Vegetable.cpp  Vegetable.hpp  ft_plant_types.cpp
cpp-01/ex6/: FloweringPlant.cpp  FloweringPlant.hpp  Garden.cpp  Garden.hpp  GardenManager.cpp  GardenManager.hpp  GardenStats.cpp  GardenStats.hpp  Plant.cpp  Plant.hpp  PrizeFlower.cpp  PrizeFlower.hpp  ft_garden_analytics.cpp
cpp-02/: CMakeLists.txt
cpp-02/ex0/: check_temperature.cpp  check_temperature.hpp  ft_first_exception.cpp
cpp-02/ex1/: ft_different_errors.cpp  test_exception_types.cpp  test_exception_types.hpp
cpp-02/ex2/: GardenError.hpp  PlantError.hpp  WaterError.hpp  ft_custom_errors.cpp  test_exceptions.cpp  test_exceptions.hpp
cpp-02/ex3/: finally.hpp  ft_finally_block.cpp  test_watering_system.cpp  test_watering_system.hpp
cpp-02/ex4/: ft_raise_errors.cpp  test_plant_checks.cpp  test_plant_checks.hpp
cpp-02/ex5/: GardenError.hpp  GardenManager.cpp  GardenManager.hpp  Plant.cpp  Plant.hpp  PlantError.hpp  WaterError.hpp  finally.hpp  ft_garden_management.cpp
cpp-03/ex0/: ft_command_quest.cpp
cpp-03/ex1/: ft_score_analytics.cpp
cpp-03/ex2/: ft_coordinate_system.cpp
cpp-03/ex3/: ft_achievement_tracker.cpp
cpp-03/ex4/: ft_inventory_system.cpp
cpp-03/ex5/: ft_data_stream.cpp
cpp-03/ex6/: ft_analytics_dashboard.cpp
cpp-04/: new_discovery.txt
cpp-04/ex0/: ancient_fragment.txt  ft_ancient_text.cpp
cpp-04/ex1/: ft_archive_creation.cpp
cpp-04/ex2/: ft_stream_management.cpp
cpp-04/ex3/: ft_vault_security.cpp
cpp-04/ex4/: ft_crisis_response.cpp
cpp-05/: CMakeLists.txt
cpp-05/ex0/: DataProcessor.hpp  LogProcessor.cpp  LogProcessor.hpp  NumericProcessor.cpp  NumericProcessor.hpp  TextProcessor.cpp  TextProcessor.hpp  main.cpp  stream_processor.cpp  template_functions.cpp  template_functions.hpp
cpp-05/ex1/: DataStream.hpp  EventStream.cpp  SensorStream.cpp  StreamProcessor.cpp  StreamProcessor.hpp  TransactionStream.cpp  data_stream.cpp  main.cpp
cpp-05/ex2/: CSVAdapter.cpp  CSVAdapter.hpp  InputStage.cpp  InputStage.hpp  JSONAdapter.cpp  JSONAdapter.hpp  NexusManager.cpp  NexusManager.hpp  OutputStage.cpp  OutputStage.hpp  ProcessingPipeline.cpp  ProcessingPipeline.hpp  ProcessingStage.hpp  StreamAdapter.cpp  StreamAdapter.hpp  TransformStage.cpp  TransformStage.hpp  main.cpp  nexus_pipeline.cpp
cpp-07/: CMakeLists.txt
cpp-07/ex0/: Card.cpp  Card.hpp  CreatureCard.cpp  CreatureCard.hpp  main  main.cpp
cpp-07/ex1/: ArtifactCard.cpp  ArtifactCard.hpp  Deck.cpp  Deck.hpp  SpellCard.cpp  SpellCard.hpp  main  main.cpp
cpp-07/ex2/: Combatable.hpp  EliteCard.cpp  EliteCard.hpp  Magical.hpp  main  main.cpp
cpp-07/ex3/: AggressiveStrategy.cpp  AggressiveStrategy.hpp  CardFactory.hpp  FantasyCardFactory.cpp  FantasyCardFactory.hpp  GameEngine.cpp  GameEngine.hpp  GameStrategy.hpp  main  main.cpp
cpp-07/ex4/: Rankable.hpp  TournamentCard.cpp  TournamentCard.hpp  TournamentPlatform.cpp  TournamentPlatform.hpp  main  main.cpp
python-00/ex0/: ft_hello_garden.py
python-00/ex1/: ft_plot_area.py
python-00/ex2/: ft_harvest_total.py
python-06/: ft_circular_curse.py  ft_import_transmutation.py  ft_pathway_debate.py  ft_sacred_scroll.py
python-08/ex01/: loading.py  pyproject.toml  requirements.txt
(+74 files in other folders)
